--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-{
+ {
     border: 1px solid #888;
 }
 
@@ -14,13 +14,13 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background-color: #1a1a1a;
+    background-color: #ffffff;
 }
 
 h1, h2 {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    color: #fff;
+    color: #000000;
     margin: 10px;
 }
 
@@ -36,7 +36,7 @@ p {
     font-family: 'Roboto', sans-serif;
     font-size: 23px;
     font-weight: 100;
-    color: #fff; 
+    color: #000000;
     margin: 10px;
 }
 
@@ -70,7 +70,7 @@ p {
     width: 540px;
     height: 540px;
     border-radius: 9px;
-    background-color: #333;
+    background-color: #d9d9d9;
     padding: 5px;
   
 
@@ -84,8 +84,8 @@ p {
     padding: 0px;
     text-align: center;
     border-radius: 9px;
-    border: 4px solid #333;
-    background-color: #252525;
+    border: 4px solid #d9d9d9;
+    background-color: #f9f9f9;
 
     background-position: center;
     background-size: 70%;
@@ -94,7 +94,7 @@ p {
 }
 
 .green {
-    background-color: #252525;
+    background-color: #f9f9f9;
     animation-name: getIn;
     animation-duration: .3s;
     animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -105,7 +105,7 @@ p {
 }
 
 .red {
-    background-color: #252525;
+    background-color: #f9f9f9;
     animation-name: getIn1;
     animation-duration: .3s;
     animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -122,20 +122,20 @@ p {
     right: 0;
     margin: auto;
     text-align: center;
-    border: 8px solid #333;
+    border: 8px solid #d9d9d9;
     border-radius: 7px;
 }
 
 .won {
-    background-color: #1a1a1a;
+    background-color: #ffffff;
     top: 100%;
     width: 600px;
     height: 300px;
 }
 
 .init {
-    background-color: #1a1a1a;
-    top: 30%;
+    background-color: #f9f9f9;
+    top: 20%;
     width: 600px;
     height: 300px;
 }
@@ -148,7 +148,7 @@ p {
     animation-timing-function: ease-in-out;
     cursor: pointer;
     text-decoration: underline;
-    text-decoration-color: #1a1a1a;
+    text-decoration-color: #333;
     margin-top: 30px;
 }
 
