--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
- {
+{
     border: 1px solid #888;
 }
 
@@ -15,6 +15,28 @@ body {
     padding: 0;
     height: 100vh;
     background-color: #ffffff;
+}
+
+.btn-toggle {
+    text-decoration-color: #333;
+    margin-top: 30px;
+    display: inline-block;  
+    box-sizing: border-box;
+    padding: 0 20px;
+    outline: none;
+    border: none;  
+    border-radius: 6px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 17px;
+    font-weight: 600;
+    text-decoration: none;
+    color: #000;
+    background-color: #e7f3ff;
+    cursor: pointer;
+    user-select: none;
+    appearance: none;
+    touch-action: manipulation
 }
 
 h1, h2 {
@@ -68,7 +90,7 @@ p {
     bottom: 0;
     margin: auto;
     width: 540px;
-    height: 540px;
+    height: 650px;
     border-radius: 9px;
     background-color: #d9d9d9;
     padding: 5px;
@@ -134,10 +156,11 @@ p {
 }
 
 .init {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     top: 20%;
     width: 600px;
     height: 300px;
+
 }
 
 .floating {
@@ -150,6 +173,25 @@ p {
     text-decoration: underline;
     text-decoration-color: #333;
     margin-top: 30px;
+    text-decoration-color: #333;
+    margin-top: 30px;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 0 20px;
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 17px;
+    font-weight: 600;
+    text-decoration: none;
+    color: #000;
+    background-color: #e7f3ff;
+    cursor: pointer;
+    user-select: none;
+    appearance: none;
+    touch-action: manipulation;
 }
 
 .levelUp {
