--- a/css/light.css
+++ b/css/light.css
@@ -15,6 +15,7 @@ body {
     padding: 0;
     height: 100vh;
     background-color: #ffffff;
+    overflow-y: hidden;
 }
 
 .btn-toggle {
@@ -86,8 +87,7 @@ p {
     position: absolute;
     left: 0;
     right: 0;
-    top: 0;
-    bottom: 0;
+    top: 10%;
     margin: auto;
     width: 540px;
     height: 650px;
@@ -111,7 +111,17 @@ p {
     background-position: center;
     background-size: 70%;
     background-repeat: no-repeat;
+      -webkit-transform: scale(1, 1);
+          transform: scale(1, 1);
+}
 
+.box:focus {
+  -webkit-animation: beat 1s ease-in-out backwards;
+          animation: beat 1s ease-in-out backwards;
+}
+.box:active {
+  -webkit-animation: none;
+          animation: none;
 }
 
 .green {
@@ -176,7 +186,7 @@ p {
     margin-top: 30px;
     display: inline-block;
     box-sizing: border-box;
-    padding: 0 20px;
+    padding: 0 30px;
     outline: none;
     border: none;
     border-radius: 6px;
